# pmgsavvsie

./: .gitignore  requirements.txt  setup.cfg  test.py  test_requirements.txt
.github/workflows/: tag-release.yml
config/: __init__.py  logconf.yaml  testconfig.cfg
pmgsavvsie/: __init__.py  baseconfig.py  core.py  model.py  scrape.py  test_model.py
pmgsavvsie/modules/rb/: __init__.py
pmgsavvsie/util/: __init__.py
tests/: test_cls.py  test_config.py  test_util.py
tests/rb/: bushy_results.html  bushy_results_p1.html  bushy_results_p2.html  races.html  races_bad_urls.html  races_paged.html  test_func.py  test_scrape.py  walesxc.html
