[metadata]
name = pmgsavvsie
version = 0.1.1

[options]
packages = pmgsavvsie
install_requires =
    python-dateutil; python_version >= "2.8.1"
    aiohttp; python_version >= "3.7.4"
    beautifulsoup4; python_version >= "4.10.0"
    pmgsiteinfra @ git+https://github.com/pckmsolutions/pmgsiteinfra.git@v0.1.8

